# DeepFakeRec

./: .gitignore  DATA_SETUP.md  INTERNAL_INSTRUCTIONS.md  README.md  RUN.md  config.yaml  debug_config_override.yaml  download_model_manual.py  main.py  pyproject.toml  requirements.txt  smoke_test.py  verify_rawboost.ipynb
run_configs/: ablation_no_da.yaml  ablation_no_finetune.yaml  ablation_softmax.yaml  ablation_sum.yaml  config.yaml  debug_config_override.yaml  eval_ablation_no_da.yaml  eval_ablation_no_da_in_the_wild.yaml  eval_ablation_softmax.yaml  eval_ablation_sum.yaml  eval_in_the_wild.yaml  eval_la21_full.yaml  override_eval_only_fix_label_parsing_15_2.yaml  run_on_samples_config.yaml  train_la19_eval_in_the_wild.yaml
sample_data/LA_2019/LA/ASVspoof2019_LA_cm_protocols/: ASVspoof2019.LA.cm.train.trn.txt
sample_data/LA_2021/ASVspoof2021_LA_eval/flac/: LA_E_1331512.flac  LA_E_1569677.flac  LA_E_1701755.flac  LA_E_2217226.flac  LA_E_2303557.flac  LA_E_2384121.flac  LA_E_3023597.flac  LA_E_3371671.flac  LA_E_3525492.flac  LA_E_3996024.flac  LA_E_4516638.flac  LA_E_4827244.flac  LA_E_5191002.flac  LA_E_5364530.flac  LA_E_5464494.flac  LA_E_5845836.flac  LA_E_5914288.flac  LA_E_6504312.flac  LA_E_6866159.flac  LA_E_8027288.flac  LA_E_9241969.flac  LA_E_9332881.flac
sample_data/LA_2021/keys/LA/CM/: trial_metadata.txt
scripts/: prepare_in_the_wild_protocol.py
src/: config.py  dataset.py  eval.py  logging.py  metrics.py  model.py  new_rawboost.py  original_rawboost.py  rawboost.py  rawboost_ssi.py  train.py
